name:                 AdventOfCode2015
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               Timo Meijer
maintainer:           timo.meijer@live.nl
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable AdventOfCode2015
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5, uu-parsinglib == 2.8.1.1, lens == 4.13
  hs-source-dirs:       src
  default-language:     Haskell2010
